added memory allocation and deploy congif in travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,19 @@ after_success:
     - docker push ssendy/multi-nginx
     - docker push ssendy/multi-server
     - docker push ssendy/multi-worker
+
+    #access_key_id: $AWS_ACCESS_KEY
+#secret_access_key: $AWS_SECRET_KEY
+
+deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: us-east-2
+    app: multi-docker
+    env: MultiDocker-env
+    bucket_name: elasticbeanstalk-us-east-2-103352467997
+    bucket_path: docker-multi
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
